--- a/pymakr.conf
+++ b/pymakr.conf
@@ -12,7 +12,10 @@
         ".git",
         "project.pymakr",
         "env",
-        "venv"
+        "venv",
+        "release.zip",
+        "LICENCE",
+        "flash"
     ],
     "fast_upload": false
 }
