receive buffer class

--- a/pymakr.conf
+++ b/pymakr.conf
@@ -1,5 +1,5 @@
 {
-    "address": "COM7",
+    "address": "COM5",
     "username": "micro",
     "password": "python",
     "sync_folder": "",
@@ -15,6 +15,7 @@
         "venv",
         "release.zip",
         "LICENCE",
+        "README.md",
         "flash"
     ],
     "fast_upload": false
