--- a/pymakr.conf
+++ b/pymakr.conf
@@ -14,7 +14,9 @@
         "env",
         "venv",
         "release.zip",
+        simulator.py,
         "LICENCE",
+        simulator,
         "flash"
     ],
     "fast_upload": false
