--- a/pymakr.conf
+++ b/pymakr.conf
@@ -14,9 +14,10 @@
         "env",
         "venv",
         "release.zip",
-        simulator.py,
+        "simulator.py",
         "LICENCE",
-        simulator,
+        "*.pyc"
+        "simulator/*",
         "flash"
     ],
     "fast_upload": false
