also works at lopy

--- a/pymakr.conf
+++ b/pymakr.conf
@@ -1,5 +1,5 @@
 {
-    "address": "COM12",
+    "address": "COM6",
     "username": "micro",
     "password": "python",
     "sync_folder": "",
@@ -15,9 +15,10 @@
         "venv",
         "release.zip",
         "simulator.py",
-        "LICENCE",
-        "*.pyc"
+        "LICENSE",
+        "*.pyc",
         "simulator/*",
+        "simulator",
         "flash"
     ],
     "fast_upload": false
