--- a/pymakr.conf
+++ b/pymakr.conf
@@ -1,5 +1,5 @@
 {
-    "address": "COM6",
+    "address": "COM5",
     "username": "micro",
     "password": "python",
     "sync_folder": "",
@@ -19,6 +19,7 @@
         "*.pyc",
         "simulator/*",
         "simulator",
+        "*/__pycache__",
         "flash"
     ],
     "fast_upload": false
