--- a/pymakr.conf
+++ b/pymakr.conf
@@ -1,5 +1,5 @@
 {
-    "address": "COM5",
+    "address": "COM9",
     "username": "micro",
     "password": "python",
     "sync_folder": "",
@@ -20,6 +20,7 @@
         "simulator/*",
         "simulator",
         "*/__pycache__",
+        "ftp_push.py",
         "flash"
     ],
     "fast_upload": false
