--- a/pymakr.conf
+++ b/pymakr.conf
@@ -1,5 +1,5 @@
 {
-    "address": "COM9",
+    "address": "COM7",
     "username": "micro",
     "password": "python",
     "sync_folder": "",
@@ -20,7 +20,8 @@
         "simulator/*",
         "simulator",
         "*/__pycache__",
-        "ftp_push.py",
+        ".pytest_cache/",
+        "release_push.py",
         "flash"
     ],
     "fast_upload": false
