--- a/pymakr.conf
+++ b/pymakr.conf
@@ -22,6 +22,7 @@
         "*/__pycache__",
         ".pytest_cache/",
         "release_push.py",
+        "README.md",
         "flash"
     ],
     "fast_upload": false
