--- a/pymakr.conf
+++ b/pymakr.conf
@@ -18,11 +18,12 @@
         "LICENSE",
         "*.pyc",
         "simulator/*",
-        "simulator",
+        "test_simulator",
         "*/__pycache__",
         ".pytest_cache/",
         "release_push.py",
         "README.md",
+        "*.sh",
         "flash"
     ],
     "fast_upload": false
