surprisingly it worked

--- a/pymakr.conf
+++ b/pymakr.conf
@@ -18,10 +18,11 @@
         "LICENSE",
         "*.pyc",
         "simulator/*",
-        "test_simulator",
         "*/__pycache__",
         ".pytest_cache/",
         "release_push.py",
+        "test_*.py",
+        "sim_*.py",
         "README.md",
         "*.sh",
         "flash"
