--- a/pymakr.conf
+++ b/pymakr.conf
@@ -2,7 +2,7 @@
     "address": "COM7",
     "username": "micro",
     "password": "python",
-    "sync_folder": "",
+    "sync_folder": "MeshTestConsole/",
     "open_on_start": true,
     "safe_boot_on_upload": false,
     "py_ignore": [
