--- a/pymakr.conf
+++ b/pymakr.conf
@@ -1,8 +1,8 @@
 {
-    "address": "COM6",
+    "address": "COM4",
     "username": "micro",
     "password": "python",
-    "sync_folder": "MeshTestConsole/",
+    "sync_folder": "SensorRead/",
     "open_on_start": true,
     "safe_boot_on_upload": false,
     "py_ignore": [
